internal/xds/translator/testdata/out/xds-ir/http-route-rewrite-url-host.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    name: first-listener/gateway_envoyproxy_io
    routes:
    - match:
        headers:
        - name: :authority
          stringMatch:
            exact: gateway.envoyproxy.io
        pathSeparatedPrefix: /origin
      name: rewrite-route
      route:
        appendXForwardedHost: true
        cluster: rewrite-route-dest
        hostRewriteLiteral: 3.3.3.3
        prefixRewrite: /rewrite
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        headers:
        - name: :authority
          stringMatch:
            exact: gateway.envoyproxy.io
        pathSeparatedPrefix: /host-header
      name: rewrite-host-header
      route:
        appendXForwardedHost: true
        cluster: rewrite-route-dest
        hostRewriteHeader: foo
        prefixRewrite: /rewrite
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        headers:
        - name: :authority
          stringMatch:
            exact: gateway.envoyproxy.io
        pathSeparatedPrefix: /host-backend
      name: rewrite-host-backend
      route:
        appendXForwardedHost: true
        autoHostRewrite: true
        cluster: rewrite-route-dest
        prefixRewrite: /rewrite
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        headers:
        - name: :authority
          stringMatch:
            exact: gateway.envoyproxy.io
        pathSeparatedPrefix: /node
      name: rewrite-host-path-regex
      route:
        appendXForwardedHost: true
        cluster: rewrite-route-dest
        hostRewritePathRegex:
          pattern:
            regex: ^/node/([0-9]+)/api.*
          substitution: backend-\1.service.namespace.svc.cluster.local
        prefixRewrite: /rewrite
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        headers:
        - name: :authority
          stringMatch:
            exact: gateway.envoyproxy.io
        pathSeparatedPrefix: /origin
      name: rewrite-route-timeout
      route:
        appendXForwardedHost: true
        cluster: rewrite-route-dest
        hostRewriteLiteral: 3.3.3.3
        idleTimeout: 3600s
        prefixRewrite: /rewrite
        timeout: 5s
        upgradeConfigs:
        - upgradeType: websocket
